fix(ui): stop forcing global img display:block so inline decorative pills align correctly

--- a/src/css/image-containers.css
+++ b/src/css/image-containers.css
@@ -5,7 +5,6 @@
 img:not(.xb-item--icon img):not(.xb-contact-form img):not(form img):not(.xb-input-field img):not(.xb-select-field img):not(.xb-select-file img):not(.xb-massage-field img):not(.xb-icon img):not(.form-btn img):not(footer img):not(.footer img):not(.xb-footer img):not(.contact-item img):not(.xb-footer-bottom img):not(.xb-footer-heading img) {
   max-width: 100%;
   height: auto;
-  display: block;
 }
 
 /* Only constrain images INSIDE containers that have explicit dimensions */
